--- a/doc/UserGuide.tex
+++ b/doc/UserGuide.tex
@@ -116,11 +116,11 @@
 \begin{document}
 
 \title{{\bf \protect{\LARGEHets} User Guide}\\ 
--- Version 0.44 --}
+-- Version 0.50 --}
 \author{Till Mossakowski\\[1em]
 Department of Computer Science\\ and Bremen
 Institute for Safe Systems,\\ University of Bremen, Germany.\\[1em]
-Comments to: hets@tzi.de
+Comments to: hets-devel@tzi.de
 }
 
 \maketitle
@@ -172,7 +172,7 @@ Language & Parser & Static Analysis & Prover \\\hline
 \CASL & x & x & - \\\hline
 \CoCASL & x & x & - \\\hline
 \ModalCASL & x & x & - \\\hline
-\HasCASL & x & (x) & - \\\hline
+\HasCASL & x & x & - \\\hline
 Haskell & x & x & -\\\hline
 \CspCASL & (x) & - & - \\\hline
 %Structured specifications & x & x & (x) \\\hline
