corrected bib git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@5339 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/doc/UserGuide.tex
+++ b/doc/UserGuide.tex
@@ -272,7 +272,7 @@ to a prover-supported logic.
 
 
 An introduction to \CASL can be found in the \CASL User Manual
-\cite{CASL/UserManual}; the detailed language reference is given in
+\cite{CASL-UM}; the detailed language reference is given in
 the \CASL Reference Manual \cite{CASL/RefManual}.  These documents
 explain both the \CASL logic and language of basic specifications as
 well as the logic-independent constructs for structured and
@@ -625,7 +625,7 @@ show that the view is well-formed (then its color turns into green).
 
 As a more complex example, consider the following loose specification
 of a sorting function, taken from the \CASL User Manual
-\cite{CASL/UserManual}, Chap.~6:
+\cite{CASL-UM}, Chap.~6:
 
 \begin{BIGEXAMPLE}
 \I\SPEC \NAMEREF{List\_Order\_Sorted}
@@ -651,7 +651,7 @@ of a sorting function, taken from the \CASL User Manual
 \end{BIGEXAMPLE}
 
 The following specification of sorting by insertion also is taken from
-the \CASL User Manual \cite{CASL/UserManual}, Chap.~6:
+the \CASL User Manual \cite{CASL-UM}, Chap.~6:
 
 \begin{BIGEXAMPLE}
 \I\SPEC \NAMEREF{List\_Order}
