__* empty log message __* git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@5438 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/doc/kl.bib
+++ b/doc/kl.bib
@@ -312,7 +312,8 @@
   year      = {2002},
   pages     = {139-143},
   ee        = {http://link.springer.de/link/service/series/0558/bibs/2392/23920139.htm},
-  bibsource = {DBLP, http://dblp.uni-trier.de}
+  bibsource = {DBLP, http://dblp.uni-trier.de},
+}
 
 @Misc{Modelware,
   title = 	 {Modelware},
