__* empty log message __* git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@5570 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/todo
+++ b/todo
@@ -303,6 +303,9 @@ IsaWin: support CASL-libraries
 Till
 ************************************************
 
+Regulate concurrent proving
+.dg files: store only current library; import .dg files for other libraries
+
 Markus' Bsp:
 Isabelle: use meta-quantifiers
 local subsumption ?
